--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="提交"
+        android:background="#603FBAF1"
         android:layout_marginTop="30dp"
         app:layout_constraintTop_toBottomOf="@id/border_view"
         app:layout_constraintStart_toStartOf="parent"
